--- a/views/layout.jade
+++ b/views/layout.jade
@@ -1,7 +1,16 @@
 doctype html
-html
+html(lang='en')
   head
     title= title
+    meta(name='viewport' content='width=device-width, initial-scale=1')
+    link(rel='stylesheet', href='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css')
     link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='https://code.jquery.com/jquery-2.1.4.min.js')
+    script(src='https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js')
+    script(src='https://cdn.rawgit.com/AceMetrix/jquery-deparam/master/jquery-deparam.js')
   body
-    block content
+    .container-fluid
+      .page-header
+        h1=title
+
+      block content
