Fixed typo in the zxing url.

--- a/views/index.jade
+++ b/views/index.jade
@@ -4,7 +4,7 @@ block content
   form.form-horizontal(method='post')
     .form-group
       .col-sm-12
-        a.btn.btn-primary.form-control(href='http://zxing.appsot.com/scan') Scan
+        a.btn.btn-primary.form-control(href='http://zxing.appspot.com/scan') Scan
     .form-group
       label.control-label.col-sm-1(for='barcode') Barcode
       .col-sm-5
