Set max height on images to prevent images that are too large from being displayed.

--- a/views/index.jade
+++ b/views/index.jade
@@ -69,7 +69,7 @@ block content
         tr
           td= row.get('barcode')
           td
-            img(src=row.get('image_url'))
+            img.product_image(src=row.get('image_url'))
             = row.get('product_name')
           td
             form(method='POST', action='/catalog_items/' + row.get('id'))
